# csp-issue

./: package-lock.json  package.json  svelte.config.js
build-isolation/: index.html  index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: LoadingScreen.svelte  LoginScreen.svelte  SetupScreen.svelte
src/routes/: +page.svelte
