[package]
name = "csp-issue"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = ["isolation"] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [ "isolation", "tray-icon"] }
serde = "1.0.210"
serde_json = "1.0.128"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
